# FlipWallet_machinecoding

./: CMakeLists.txt
include/: Transaction.h  User.h  Wallet.h
src/: Transaction.cpp  User.cpp  Wallet.cpp  main.cpp
